@@ -50,7 +50,8 @@ Features:
         ('/etc/dbus-1/system.d/', ['support/dbus/cn.ailurus.conf']),
         ('share/PolicyKit/policy/', ['support/policykit0/cn.ailurus.policy']),
         ('share/polkit-1/actions/', ['support/policykit1/cn.ailurus.policy']),
-        ('share/ailurus/support/', [ e for e in glob('support/*') if os.path.isfile(e)] )
+        ('share/ailurus/support/', [ e for e in glob('support/*') if os.path.isfile(e)] ),
+        ('share/ailurus/support/', ['support/dbus/cn.ailurus.service', 'support/dbus/cn.ailurus.conf']),
       ],
       scripts = ['bin/ailurus'],
       cmdclass = { 'build' :  build_extra.build_extra,
